--- a/src/components/Header/Header.style.scss
+++ b/src/components/Header/Header.style.scss
@@ -2,4 +2,12 @@
     height: 70px;
     background-color: #283747;
     width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    .header-logo {
+        color:  #909497 ;
+        font-size: 30px;
+        font-weight: bold;
+    }
 }
