--- a/src/components/Header/Header.style.scss
+++ b/src/components/Header/Header.style.scss
@@ -1,13 +1,23 @@
 .header-container {
-    height: 70px;
-    background-color: #283747;
-    width: 100%;
+  height: 70px;
+  background-color: #17202A;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  .header-item {
+    font-weight: bold;
     display: flex;
+    flex-direction: column;
     align-items: center;
-    justify-content: center;
-    .header-logo {
-        color:  #909497 ;
-        font-size: 30px;
-        font-weight: bold;
+
+    .header-title {
+      font-size: 28px;
+      color: #ecf0f1;
     }
+    .header-subtitle {
+      color:  #f9e79f ;
+      font-size: 14px;
+    }
+  }
 }
