--- a/src/components/Sidebar/Sidebar.style.scss
+++ b/src/components/Sidebar/Sidebar.style.scss
@@ -21,4 +21,38 @@
         font-size: 28px;
         color: #F4F6F7
     }
+    .menu-icon {
+        &:hover>.sidebar-submenu {
+            visibility: visible;
+        }
+    }
+
 }
+
+
+.sidebar-submenu {
+    width: 200px;
+    background-color: #17202A  ;
+    height: 100vh;
+    position: fixed;
+    left: 48px;
+    z-index: 2;
+    top: 83px;
+    display: flex;
+    flex-direction: column;
+    padding-left: 10px;
+    visibility: hidden;
+    .submenu-item {
+        padding-top: 10px;
+        cursor: pointer;
+        color: #a6acaf;
+        font-size: 14px;
+        transition: 0.2s;
+
+    }
+    .submenu-item:hover {
+        font-size: 16px;
+        color: #F4F6F7
+    }
+}
+
