--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,26 @@
 .app-container {
-  background-color:#34495E  ;
+  background-color: #34495e;
   height: 100vh;
   width: 100%;
 }
 
+/* width */
+::-webkit-scrollbar {
+  width: 6px;
+  height: 6px
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #616A6B;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #34495E;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #1C2833;
+}
